[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/structures"]


[project]
name = "map-graph"
version = "0.0.1"
authors = [
  { name="runstache" },
]
description = "Lightweight Graph implementation for data transformations"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/runstache/map-graph"
"Bug Tracker" = "https://github.com/runstache/map-graph/issues"